Finished HW. It is working now.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         nav
     </nav>
-    <div id="container">
+    <div class="clearfix" id="container">
         <section>
             section
             <article>
@@ -23,7 +23,6 @@
                 </div>
             </article>
         </section>
-        <!-- <div id="spacer">&nbsp</div> -->
         <aside>
             aside
         </aside>
